new line changes

--- a/lib/l10n/intl_bg.arb
+++ b/lib/l10n/intl_bg.arb
@@ -38,7 +38,7 @@
   "lastName": "Фамилия",
   "enterYourLogin": "Въведете данните си за вход",
   "enterYourPassword": "Въведете вашата парола",
-  "selectCategoriesFromTheListnmaybeSeveral": "Изберете категории от списъка\\n(може няколко)",
+  "selectCategoriesFromTheListnmaybeSeveral": "Изберете категории от списъка\n(може няколко)",
   "setPercentageOfIncomeIfNecessary": "Задайте процент от дохода, ако е необходимо",
   "setPercentageOfIncome": "Задайте процент от дохода",
   "percentage": "Процент",
@@ -114,7 +114,7 @@
   "service": "Услуга: ",
   "editReport": "Редактиране на отчет",
   "employees": "Служители",
-  "noEmployeeFoundnpleaseAddANewEmployee": "Няма намерен служител\\nМоля, добавете нов служител.",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Няма намерен служител\nМоля, добавете нов служител.",
   "search": "Търсене",
   "accessLevel": "Ниво на достъп",
   "notLimited": "Неограничено",
@@ -129,18 +129,18 @@
   "masters": "Майстори",
   "services": "Услуги",
   "selectLanguage": "Избор на език",
-  "nameOfncost": "Име на\\nЦена",
-  "relatedncategories": "Свързани\\nкатегории",
-  "deductednfromTax": "Приспаднат\\nот ДАНЪКА",
-  "systematicnexpenditure": "Систmatic\\nРазходи",
+  "nameOfncost": "Име на\nЦена",
+  "relatedncategories": "Свързани\nкатегории",
+  "deductednfromTax": "Приспаднат\nот ДАНЪКА",
+  "systematicnexpenditure": "Систmatic\nРазходи",
  "deleteCost": "Изтриване на разходите",
  "areYouSureYouWantToDeleteThisCost": "Сигурни ли сте, че искате да изтриете тази цена?",
  "noData": "Няма данни",
- "regncus": "Reg\\nCus",
- "cardnpay": "Плащане с карта\\n",
- "employeendata": "Данни за \\nслужителя",
- "customerndata": "Клиентски\\nданни",
- "newncus": "Нов\\nCus",
+ "regncus": "Reg\nCus",
+ "cardnpay": "Плащане с карта\n",
+ "employeendata": "Данни за \nслужителя",
+ "customerndata": "Клиентски\nданни",
+ "newncus": "Нов\nCus",
  "total": "Общо",
  "deleted": "Изтрит",
  "itemDeleted": "Елементът е изтрит",
@@ -148,7 +148,7 @@
  "areYouSureYouWantToDeleteThisCategory": "Сигурни ли сте, че искате да изтриете тази категория?",
  "deleteService": "Изтриване на услуга",
  "areYouSureYouWantToDeleteThisService": "Сигурни ли сте, че искате да изтриете тази услуга?",
- "noServicesFoundnpleaseAddANewService": "Няма намерени услуги\\nМоля, добавете нова услуга",
+ "noServicesFoundnpleaseAddANewService": "Няма намерени услуги\nМоля, добавете нова услуга",
  "backupRestoredSuccessfully": "Архивирането е възстановено успешно!",
  "reloadApp": "Презареждане на приложението",
  "restoringDatabase": "Възстановява се база данни...",
@@ -160,14 +160,14 @@
  "clearDates": "Изчистване на дати",
  "anErrorOccurred": "Възникна грешка",
  "noDataFound": "Няма намерени данни",
- "masternname": "Главно\\nиме",
- "noRegnclient": "No. Reg\\nClient",
- "noNewnclient": "Не. Нов\\nклиент",
- "noOfnservices": "Брой\\nуслуги",
+ "masternname": "Главно\nиме",
+ "noRegnclient": "No. Reg\nClient",
+ "noNewnclient": "Не. Нов\nклиент",
+ "noOfnservices": "Брой\nуслуги",
  "cost": "Цена",
- "newnclient": "Нов\\nклиент",
- "regnclient": "Регистрационен\\nклиент",
- "numOfnservices": "Брой\\nуслуги",
+ "newnclient": "Нов\nклиент",
+ "regnclient": "Регистрационен\nклиент",
+ "numOfnservices": "Брой\nуслуги",
  "costs": "разходи",
  "sales": "Продажби"
 }
