--- a/lib/l10n/intl_cs.arb
+++ b/lib/l10n/intl_cs.arb
@@ -38,7 +38,7 @@
   "lastName": "Příjmení",
   "enterYourLogin": "Zadejte přihlašovací údaje",
   "enterYourPassword": "Zadejte své heslo",
-  "selectCategoriesFromTheListnmaybeSeveral": "Vyberte kategorie ze seznamu\\n(možná několik)",
+  "selectCategoriesFromTheListnmaybeSeveral": "Vyberte kategorie ze seznamu\n(možná několik)",
   "setPercentageOfIncomeIfNecessary": "V případě potřeby nastavte procento příjmu",
   "setPercentageOfIncome": "Nastavit procento příjmu",
   "percentage": "Procento",
@@ -114,7 +114,7 @@
   "service": "Service: ",
   "editReport": "Upravit zprávu",
   "employees": "Zaměstnanci",
-  "noEmployeeFoundnpleaseAddANewEmployee": "Nenalezen žádný zaměstnanec\\nPřidejte prosím nového zaměstnance.",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Nenalezen žádný zaměstnanec\nPřidejte prosím nového zaměstnance.",
   "search": "Hledat",
   "accessLevel": "Úroveň přístupu",
   "notLimited": "Bez omezení",
@@ -129,18 +129,18 @@
   "masters": "Mistři",
   "services": "Služby",
   "selectLanguage": "Vybrat jazyk",
-  "nameOfncost": "Název\\nCena",
-  "relatedncategories": "Související\\nkategorie",
-  "deductednfromTax": "Odečteno\\nZ DANĚ",
-  "systematicnexpenditure": "Systmatic\\nVýdaje",
+  "nameOfncost": "Název\nCena",
+  "relatedncategories": "Související\nkategorie",
+  "deductednfromTax": "Odečteno\nZ DANĚ",
+  "systematicnexpenditure": "Systmatic\nVýdaje",
  "deleteCost": "Smazat cenu",
  "areYouSureYouWantToDeleteThisCost": "Opravdu chcete smazat tyto náklady?",
  "noData": "Žádná data",
- "regncus": "Reg\\nCus",
- "cardnpay": "Karta\\nZaplatit",
- "employeendata": "Zaměstnanec\\nData",
- "customerndata": "Zákazník\\nData",
- "newncus": "Nový\\nCus",
+ "regncus": "Reg\nCus",
+ "cardnpay": "Karta\nZaplatit",
+ "employeendata": "Zaměstnanec\nData",
+ "customerndata": "Zákazník\nData",
+ "newncus": "Nový\nCus",
  "total": "Celkem",
  "deleted": "Smazáno",
  "itemDeleted": "Položka smazána",
@@ -148,7 +148,7 @@
  "areYouSureYouWantToDeleteThisCategory": "Opravdu chcete smazat tuto kategorii?",
  "deleteService": "Smazat službu",
  "areYouSureYouWantToDeleteThisService": "Opravdu chcete smazat tuto službu?",
- "noServicesFoundnpleaseAddANewService": "Nenalezeny žádné služby\\nPřidejte prosím novou službu",
+ "noServicesFoundnpleaseAddANewService": "Nenalezeny žádné služby\nPřidejte prosím novou službu",
  "backupRestoredSuccessfully": "Záloha byla úspěšně obnovena!",
  "reloadApp": "Znovu načíst aplikaci",
  "restoringDatabase": "Obnovuji databázi...",
@@ -160,14 +160,14 @@
  "clearDates": "Vymazat data",
  "anErrorOccurred": "Došlo k chybě",
  "noDataFound": "Nebyla nalezena žádná data",
- "masternname": "Mistr\\nJméno",
- "noRegnclient": "Ne. Reg\\nKlient",
- "noNewnclient": "Ne. Nový\\nKlient",
- "noOfnservices": "Počet\\nslužeb",
+ "masternname": "Mistr\nJméno",
+ "noRegnclient": "Ne. Reg\nKlient",
+ "noNewnclient": "Ne. Nový\nKlient",
+ "noOfnservices": "Počet\nslužeb",
  "cost": "Cena",
- "newnclient": "Nový\\nKlient",
- "regnclient": "Reg\\nKlient",
- "numOfnservices": "Počet\\nSlužeb",
+ "newnclient": "Nový\nKlient",
+ "regnclient": "Reg\nKlient",
+ "numOfnservices": "Počet\nSlužeb",
  "costs": "náklady",
  "sales": "Prodej"
 }
