--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -38,7 +38,7 @@
   "lastName": "Nachname",
   "enterYourLogin": "Geben Sie Ihren Benutzernamen ein",
   "enterYourPassword": "Geben Sie Ihr Passwort ein",
-  "selectCategoriesFromTheListnmaybeSeveral": "Wählen Sie Kategorien aus der Liste\\n(eventuell mehrere)",
+  "selectCategoriesFromTheListnmaybeSeveral": "Wählen Sie Kategorien aus der Liste\n(eventuell mehrere)",
   "setPercentageOfIncomeIfNecessary": "Legen Sie bei Bedarf den Prozentsatz des Einkommens fest",
   "setPercentageOfIncome": "Legen Sie den Prozentsatz des Einkommens fest",
   "percentage": "Prozentsatz",
@@ -114,7 +114,7 @@
   "service": "Dienst: ",
   "editReport": "Bericht bearbeiten",
   "employees": "Mitarbeiter",
-  "noEmployeeFoundnpleaseAddANewEmployee": "Kein Mitarbeiter gefunden\\nBitte fügen Sie einen neuen Mitarbeiter hinzu.",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Kein Mitarbeiter gefunden\nBitte fügen Sie einen neuen Mitarbeiter hinzu.",
   "search": "Suchen",
   "accessLevel": "Zugriffsebene",
   "notLimited": "Nicht begrenzt",
@@ -129,18 +129,18 @@
   "masters": "Master",
   "services": "Dienste",
   "selectLanguage": "Sprache auswählen",
-  "nameOfncost": "Name der\\nKosten",
-  "relatedncategories": "Verwandte\\nKategorien",
+  "nameOfncost": "Name der\nKosten",
+  "relatedncategories": "Verwandte\nKategorien",
   "deductednfromTax": "Von der STEUER abgezogen",
-  "systematicnexpenditure": "Systemmatic\\nExpenditure",
+  "systematicnexpenditure": "Systemmatic\nExpenditure",
 "deleteCost": "Kosten löschen",
 "areYouSureYouWantToDeleteThisCost": "Möchten Sie diese Kosten wirklich löschen?",
 "noData": "Keine Daten",
-"regncus": "Reg\\nCus",
-"cardnpay": "Card\\nPay",
+"regncus": "Reg\nCus",
+"cardnpay": "Card\nPay",
 "employeendata": "Mitarbeiterdaten",
 "customerndata": "Kundendaten",
-"newncus": "Neuer\\nCus",
+"newncus": "Neuer\nCus",
 "total": "Gesamt",
 "deleted": "Gelöscht",
 "itemDeleted": "Artikel gelöscht",
@@ -148,7 +148,7 @@
 "areYouSureYouWantToDeleteThisCategory": "Möchten Sie diese Kategorie wirklich löschen?",
 "deleteService": "Dienst löschen",
 "areYouSureYouWantToDeleteThisService": "Sind Sie sicher Sie möchten diesen Dienst löschen?",
-"noServicesFoundnpleaseAddANewService": "Keine Dienste gefunden\\nBitte fügen Sie einen neuen Dienst hinzu",
+"noServicesFoundnpleaseAddANewService": "Keine Dienste gefunden\nBitte fügen Sie einen neuen Dienst hinzu",
 "backupRestoredSuccessfully": "Backup erfolgreich wiederhergestellt!",
 "reloadApp": "App neu laden",
 "restoringDatabase": "Datenbank wird wiederhergestellt...",
@@ -160,14 +160,14 @@
 "clearDates": "Daten löschen",
 "anErrorOccurred": "Ein Fehler ist aufgetreten",
 "noDataFound": "Keine Daten gefunden",
-"masternname": "Master\\nName",
-"noRegnclient": "Nein. Reg\\nClient",
-"noNewnclient": "Anzahl neuer\\nClients",
-"noOfnservices": "Anzahl\\nDienste",
+"masternname": "Master\nName",
+"noRegnclient": "Nein. Reg\nClient",
+"noNewnclient": "Anzahl neuer\nClients",
+"noOfnservices": "Anzahl\nDienste",
 "cost": "Kosten",
-"newnclient": "Neuer\\nClient",
-"regnclient": "Reg\\nClient",
-"numOfnservices": "Anzahl\\nDienste",
+"newnclient": "Neuer\nClient",
+"regnclient": "Reg\nClient",
+"numOfnservices": "Anzahl\nDienste",
 "costs": "Kosten",
 "sales": "Verkäufe"
 }
