--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -38,7 +38,7 @@
   "lastName": "Last Name",
   "enterYourLogin": "Enter your login",
   "enterYourPassword": "Enter your password",
-  "selectCategoriesFromTheListnmaybeSeveral": "Select Categories from the list\\n(maybe several)",
+  "selectCategoriesFromTheListnmaybeSeveral": "Select Categories from the list\n(maybe several)",
   "setPercentageOfIncomeIfNecessary": "Set percentage of income if necessary",
   "setPercentageOfIncome": "Set percentage of income",
   "percentage": "Percentage",
@@ -114,7 +114,7 @@
   "service": "Service: ",
   "editReport": "Edit Report",
   "employees": "Employees",
-  "noEmployeeFoundnpleaseAddANewEmployee": "No Employee Found\\nPlease add a new employee.",
+  "noEmployeeFoundnpleaseAddANewEmployee": "No Employee Found\nPlease add a new employee.",
   "search": "Search",
   "accessLevel": "Access Level",
   "notLimited": "Not Limited",
@@ -129,18 +129,18 @@
   "masters": "Masters",
   "services": "Services",
   "selectLanguage": "Select Language",
-  "nameOfncost": "Name of\\nCost",
-  "relatedncategories": "Related\\nCategories",
-  "deductednfromTax": "Deducted\\nFrom TAX",
-  "systematicnexpenditure": "Systematic\\nExpenditure",
+  "nameOfncost": "Name of\nCost",
+  "relatedncategories": "Related\nCategories",
+  "deductednfromTax": "Deducted\nFrom TAX",
+  "systematicnexpenditure": "Systematic\nExpenditure",
   "deleteCost": "Delete Cost",
   "areYouSureYouWantToDeleteThisCost": "Are you sure you want to delete this cost?",
   "noData": "No data",
-  "regncus": "Reg\\nCus",
-  "cardnpay": "Card\\nPay",
-  "employeendata": "Employee\\nData",
-  "customerndata": "Customer\\nData",
-  "newncus": "New\\nCus",
+  "regncus": "Reg\nCus",
+  "cardnpay": "Card\nPay",
+  "employeendata": "Employee\nData",
+  "customerndata": "Customer\nData",
+  "newncus": "New\nCus",
   "total": "Total",
   "deleted": "Deleted",
   "itemDeleted": "Item deleted",
@@ -148,7 +148,7 @@
   "areYouSureYouWantToDeleteThisCategory": "Are you sure you want to delete this category?",
   "deleteService": "Delete Service",
   "areYouSureYouWantToDeleteThisService": "Are you sure you want to delete this service?",
-  "noServicesFoundnpleaseAddANewService": "No Services Found\\nPlease add a new service",
+  "noServicesFoundnpleaseAddANewService": "No Services Found\nPlease add a new service",
   "backupRestoredSuccessfully": "Backup restored successfully!",
   "reloadApp": "Reload App",
   "restoringDatabase": "Restoring database...",
@@ -160,14 +160,14 @@
   "clearDates": "Clear Dates",
   "anErrorOccurred": "An error occurred",
   "noDataFound": "No data found",
-  "masternname": "Master\\nName",
-  "noRegnclient": "No. Reg\\nClient",
-  "noNewnclient": "No. New\\nClient",
-  "noOfnservices": "No of\\nservices",
+  "masternname": "Master\nName",
+  "noRegnclient": "No. Reg\nClient",
+  "noNewnclient": "No. New\nClient",
+  "noOfnservices": "No of\nservices",
   "cost": "Cost",
-  "newnclient": "New\\nClient",
-  "regnclient": "Reg\\nClient",
-  "numOfnservices": "Num. of\\nServices",
+  "newnclient": "New\nClient",
+  "regnclient": "Reg\nClient",
+  "numOfnservices": "Num. of\nServices",
   "costs": "costs",
   "sales": "Sales"
 }
