--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -38,7 +38,7 @@
   "lastName": "ApellidoApellido",
   "enterYourLogin": "Ingrese su nombre de usuario",
   "enterYourPassword": "Ingrese su contraseña",
-  "selectCategoriesFromTheListnmaybeSeveral": "Seleccione categorías de la lista\\n(tal vez varias)",
+  "selectCategoriesFromTheListnmaybeSeveral": "Seleccione categorías de la lista\n(tal vez varias)",
   "setPercentageOfIncomeIfNecessary": "Establece el porcentaje de ingresos si es necesario",
   "setPercentageOfIncome": "Establecer porcentaje de ingresos",
   "percentage": "Porcentaje",
@@ -114,7 +114,7 @@
   "service": "Servicio:",
   "editReport": "Editar informe",
   "employees": "Empleados",
-  "noEmployeeFoundnpleaseAddANewEmployee": "No se encontró ningún empleado\\nPor favor agregue un nuevo empleado.",
+  "noEmployeeFoundnpleaseAddANewEmployee": "No se encontró ningún empleado\nPor favor agregue un nuevo empleado.",
   "search": "Buscar",
   "accessLevel": "Nivel de Acceso",
   "notLimited": "No limitado",
@@ -129,18 +129,18 @@
   "masters": "Maestros",
   "services": "Servicios",
   "selectLanguage": "Seleccionar idioma",
-  "nameOfncost": "Nombre del\\nCosto",
-  "relatedncategories": "Categorías\\nrelacionadas",
-  "deductednfromTax": "Deducido\\nDe IMPUESTOS",
-  "systematicnexpenditure": "Sistemamatic\\nGasto",
+  "nameOfncost": "Nombre del\nCosto",
+  "relatedncategories": "Categorías\nrelacionadas",
+  "deductednfromTax": "Deducido\nDe IMPUESTOS",
+  "systematicnexpenditure": "Sistemamatic\nGasto",
  "deleteCost": "Eliminar Costo",
  "areYouSureYouWantToDeleteThisCost": "¿Está seguro de que desea eliminar este costo?",
  "noData": "Sin datos",
- "regncus": "Reg\\nCus",
- "cardnpay": "Tarjeta\\nPagar",
- "employeendata": "Empleado\\nDatos",
- "customerndata": "Cliente\\nDatos",
- "newncus": "Nuevo\\nCus",
+ "regncus": "Reg\nCus",
+ "cardnpay": "Tarjeta\nPagar",
+ "employeendata": "Empleado\nDatos",
+ "customerndata": "Cliente\nDatos",
+ "newncus": "Nuevo\nCus",
  "total": "total",
  "deleted": "Eliminado",
  "itemDeleted": "Elemento eliminado",
@@ -148,7 +148,7 @@
  "areYouSureYouWantToDeleteThisCategory": "¿Está seguro de que desea eliminar esta categoría?",
  "deleteService": "Eliminar servicio",
  "areYouSureYouWantToDeleteThisService": "¿Está seguro de que desea eliminar este servicio?",
- "noServicesFoundnpleaseAddANewService": "No se encontraron servicios\\nPor favor agregue un nuevo servicio",
+ "noServicesFoundnpleaseAddANewService": "No se encontraron servicios\nPor favor agregue un nuevo servicio",
  "backupRestoredSuccessfully": "¡Copia de seguridad restaurada exitosamente!",
  "reloadApp": "Recargar aplicación",
  "restoringDatabase": "Restaurando base de datos...",
@@ -160,14 +160,14 @@
  "clearDates": "Borrar fechas",
  "anErrorOccurred": "Ocurrió un error",
  "noDataFound": "No se encontraron datos",
- "masternname": "Maestro\\nNombre",
- "noRegnclient": "No. Reg\\nCliente",
- "noNewnclient": "Nº Nuevo\\nCliente",
- "noOfnservices": "Nº de\\nservicios",
+ "masternname": "Maestro\nNombre",
+ "noRegnclient": "No. Reg\nCliente",
+ "noNewnclient": "Nº Nuevo\nCliente",
+ "noOfnservices": "Nº de\nservicios",
  "cost": "costo",
- "newnclient": "Nuevo\\nCliente",
- "regnclient": "Reg\\nCliente",
- "numOfnservices": "Núm. de\\nServicios",
+ "newnclient": "Nuevo\nCliente",
+ "regnclient": "Reg\nCliente",
+ "numOfnservices": "Núm. de\nServicios",
  "costs": "costos",
  "sales": "Ventas"
 }
