--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -38,7 +38,7 @@
  "lastName": "Nazwisko",
  "enterYourLogin": "Wprowadź swój login",
  "enterYourPassword": "Wprowadź swoje hasło",
- "selectCategoriesFromTheListnmaybeSeveral": "Wybierz kategorie z listy\\n(może kilka)",
+ "selectCategoriesFromTheListnmaybeSeveral": "Wybierz kategorie z listy\n(może kilka)",
  "setPercentageOfIncomeIfNecessary": "Ustaw procent dochodu, jeśli to konieczne",
  "setPercentageOfIncome": "Ustaw procent dochodu",
  "percentage": "Procent",
@@ -114,7 +114,7 @@
  "service": "usługa: ",
  "editReport": "Edytuj raport",
  "employees": "pracownicy",
- "noEmployeeFoundnpleaseAddANewEmployee": "Nie znaleziono pracownika\\nProszę dodać nowego pracownika.",
+ "noEmployeeFoundnpleaseAddANewEmployee": "Nie znaleziono pracownika\nProszę dodać nowego pracownika.",
  "search":"Szukaj",
  "accessLevel": "Poziom dostępu",
  "notLimited": "Bez ograniczeń",
@@ -129,18 +129,18 @@
  "masters": "mistrzowie",
  "services": "Usługi",
  "selectLanguage": "Wybierz język",
- "nameOfncost": "Nazwa\\nKosztu",
- "relatedncategories": "Powiązane\\nKategorie",
- "deductednfromTax": "Odliczone\\nOd podatku",
- "systematicnexpenditure": "Systematic\\nWydatki",
+ "nameOfncost": "Nazwa\nKosztu",
+ "relatedncategories": "Powiązane\nKategorie",
+ "deductednfromTax": "Odliczone\nOd podatku",
+ "systematicnexpenditure": "Systematic\nWydatki",
  "deleteCost": "Usuń koszt",
  "areYouSureYouWantToDeleteThisCost": "Czy na pewno chcesz usunąć ten koszt?",
  "noData": "Brak danych",
- "regncus": "Reg\\nCus",
- "cardnpay": "Karta\\nZapłać",
- "employeendata": "Dane pracownika\\n",
- "customerndata": "Dane klienta\\n",
- "newncus": "Nowy\\nCus",
+ "regncus": "Reg\nCus",
+ "cardnpay": "Karta\nZapłać",
+ "employeendata": "Dane pracownika\n",
+ "customerndata": "Dane klienta\n",
+ "newncus": "Nowy\nCus",
  "total": "Łącznie",
  "deleted": "usunięte",
  "itemDeleted": "Element usunięty",
@@ -148,7 +148,7 @@
  "areYouSureYouWantToDeleteThisCategory": "Czy na pewno chcesz usunąć tę kategorię?",
  "deleteService": "Usuń usługę",
  "areYouSureYouWantToDeleteThisService": "Czy na pewno chcesz usunąć tę usługę?",
- "noServicesFoundnpleaseAddANewService": "Nie znaleziono usług\\nProszę dodać nową usługę",
+ "noServicesFoundnpleaseAddANewService": "Nie znaleziono usług\nProszę dodać nową usługę",
  "backupRestoredSuccessfully": "Kopia zapasowa została przywrócona pomyślnie!",
  "reloadApp": "Załaduj ponownie aplikację",
  "restoringDatabase": "Przywracanie bazy danych...",
@@ -160,14 +160,14 @@
  "clearDates": "Wyczyść daty",
  "anErrorOccurred": "Wystąpił błąd",
  "noDataFound": "Nie znaleziono danych",
- "masternname": "Master\\nNazwa",
- "noRegnclient": "Nr rej\\nKlient",
- "noNewnclient": "Nie. Nowy\\nKlient",
- "noOfnservices": "Liczba\\nusług",
+ "masternname": "Master\nNazwa",
+ "noRegnclient": "Nr rej\nKlient",
+ "noNewnclient": "Nie. Nowy\nKlient",
+ "noOfnservices": "Liczba\nusług",
  "cost": "Koszt",
- "newnclient": "Nowy\\nKlient",
- "regnclient": "Zarejestruj\\nKlienta",
- "numOfnservices": "Liczba\\nusług",
+ "newnclient": "Nowy\nKlient",
+ "regnclient": "Zarejestruj\nKlienta",
+ "numOfnservices": "Liczba\nusług",
  "costs": "koszty",
  "sales": "sprzedaż"
 }
