--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -3,23 +3,23 @@
   "repetitionInterval": "Інтервал повторення",
   "doNotRepeat": "Не повторювати",
   "everyDay": "Щодня",
-  "name": "Ім'я",
-  "nameOfExpense": "Назва витрати",
+  "name": "Ім'я ",
+  "nameOfExpense": "Назва витрат",
   "selectCategories": "Виберіть категорії",
   "categories": "Категорії",
-  "deductFromTax": "Відрахувати з податку",
+  "deductFromTax": "Вирахувати з ПОДАТКУ",
   "systematicExpenditure": "Систематичні витрати",
-  "everyWeek": "Щотижня",
-  "everyMonth": "Щомісяця",
-  "everyQuarter": "Щокварталу",
-  "everyYear": "Щороку",
+  "everyWeek": "Кожного тижня",
+  "everyMonth": "Кожного місяця",
+  "everyQuarter": "Кожен квартал",
+  "everyYear": "Кожного року",
   "numberOfUnits": "Кількість одиниць",
   "unitPrice": "Ціна за одиницю",
-  "unitOfMeasurements": "Одиниці вимірювання",
+  "unitOfMeasurements": "Одиниця вимірювання",
   "noUnitOfMeasurements": "Немає одиниць вимірювання",
   "save": "Зберегти",
   "addEmployee": "Додати співробітника",
-  "enterYourName": "Введіть ваше ім'я",
+  "enterYourName": "Введіть своє ім'я",
   "changeAdminPassword": "Змінити пароль адміністратора",
   "exportToFile": "Експортувати у файл",
   "securityQuestions": "Питання безпеки",
@@ -33,24 +33,24 @@
   "userName": "Ім'я користувача",
   "password": "Пароль",
   "orSignInAs": "Або увійдіть як",
-  "adminMaine": "Адмін Мен",
-  "enterYourLastName": "Введіть ваше прізвище",
+  "adminMaine": "Адміністратор Мейн",
+  "enterYourLastName": "Введіть своє прізвище",
   "lastName": "Прізвище",
-  "enterYourLogin": "Введіть ваш логін",
-  "enterYourPassword": "Введіть ваш пароль",
-  "selectCategoriesFromTheListnmaybeSeveral": "Виберіть категорії зі списку\\n(можливо кілька)",
-  "setPercentageOfIncomeIfNecessary": "Встановіть відсоток доходу за необхідності",
-  "setPercentageOfIncome": "Встановіть відсоток доходу",
+  "enterYourLogin": "Введіть свій логін",
+  "enterYourPassword": "Введіть свій пароль",
+  "selectCategoriesFromTheListnmaybeSeveral": "Виберіть категорії зі списку\n(можливо кілька)",
+  "setPercentageOfIncomeIfNecessary": "Встановити відсоток доходу, якщо необхідно",
+  "setPercentageOfIncome": "Установити відсоток доходу",
   "percentage": "Відсоток",
-  "visibilityLevelWithACrossFromTheList": "Рівень видимості з хрестиком зі списку",
-  "employeePercentage": "Відсоток співробітника",
-  "totalPercentagePerMonth": "Загальний відсоток за місяць",
-  "amountPercentagePerDay": "Сума відсотка за день",
+  "visibilityLevelWithACrossFromTheList": " Рівень видимості з хрестиком зі списку",
+  "employeePercentage": "Відсоток працівників",
+  "totalPercentagePerMonth": "Загальний відсоток на місяць",
+  "amountPercentagePerDay": "Сума у ​​відсотках на день",
   "showPhone": "Показати телефон",
-  "totalPriceServicePerDay": "Загальна ціна послуги за день",
-  "saveEmployee": "Зберегти співробітника",
+  "totalPriceServicePerDay": "Загальна вартість послуги за день",
+  "saveEmployee": "Зберегти працівника",
   "numberOfServiceForMonth": "Кількість послуг за місяць",
-  "hello": "Привіт, ",
+    "hello":" привіт, ",
   "addReport": "Додати звіт",
   "nameOfClient": "Ім'я клієнта",
   "lastNameOfClient": "Прізвище клієнта",
@@ -59,62 +59,62 @@
   "regularCustomer": "Постійний клієнт",
   "paymentByCard": "Оплата карткою",
   "selectCategory": "Виберіть категорію",
-  "selectService": "Виберіть послугу",
+  "selectService": "Виберіть службу",
   "priceOfService": "Ціна послуги",
   "price": "Ціна",
   "submit": "Надіслати",
   "addService": "Додати послугу",
-  "createOrSelectACategory": "Створіть або виберіть категорію",
-  "orCreateANewCategory": "Або створіть нову категорію",
+  "createOrSelectACategory": "Створити або вибрати категорію",
+  "orCreateANewCategory": "Або створити нову категорію",
   "enterCategoryName": "Введіть назву категорії",
-  "nameOfTheService": "Назва послуги",
+  "nameOfTheService": "Назва служби",
   "categoryName": "Назва категорії",
-  "enterServiceName": "Введіть назву послуги",
-  "serviceName": "Назва послуги",
+  "enterServiceName": "Введіть назву служби",
+  "serviceName": "Назва служби",
   "costOfMaterialsForThisServices": "Вартість матеріалів для цієї послуги",
   "enterPrice": "Введіть ціну",
-  "adminLogin": "Вхід для адміністратора",
-  "setAdminPassword": "Встановіть пароль адміністратора",
+  "adminLogin": "Вхід адміністратора",
+  "setAdminPassword": "Установити пароль адміністратора ",
   "enterPasswordHere": "Введіть пароль тут",
   "forgotPassword": "Забули пароль?",
   "resetHere": "Скинути тут",
-  "exit": "Вийти",
+  "exit": "Вихід",
   "areYouSureYouWantToExitTheApp": "Ви впевнені? Ви хочете вийти з програми.",
   "exitApp": "Вийти з програми",
-  "yes": "Так",
-  "no": "Ні",
+  "yes":"Так",
+  "no":"ні",
   "costsFilter": "Фільтр витрат",
   "clear": "Очистити",
-  "nameOfCost": "Назва витрат",
-  "costsPriceRange": "Ціновий діапазон витрат",
+  "nameOfCost": "Назва вартості",
+  "costsPriceRange": "Діапазон цін на витрати",
   "minPrice": "Мінімальна ціна",
   "maxPrice": "Максимальна ціна",
   "applyFilter": "Застосувати фільтр",
   "cancel": "Скасувати",
   "confirm": "Підтвердити",
-  "all": "Все",
+  "all": "Усі",
   "done": "Готово",
   "newPassword": "Новий пароль",
   "editCategory": "Редагувати категорію",
-  "editService": "Редагувати послугу",
-  "answerTheSecurityQuestionsToLogin": "Відповідайте на питання безпеки для входу",
+  "editService": "Редагувати службу",
+  "answerTheSecurityQuestionsToLogin": "Дайте відповіді на таємні запитання, щоб увійти",
   "answer": "Відповідь",
   "incorrectAnswer": "Неправильна відповідь",
-  "pleaseTryAgain": "Спробуйте ще раз",
-  "previousQuestion": "Попереднє питання",
-  "selectQuestion": "Виберіть питання",
-  "pleaseSelectAQuestion": "Будь ласка, виберіть питання",
+  "pleaseTryAgain": "Будь ласка, спробуйте ще раз",
+  "previousQuestion": "Попереднє запитання ",
+  "selectQuestion": "Виберіть запитання",
+  "pleaseSelectAQuestion": "Будь ласка, виберіть запитання",
   "pleaseFillInTheAnswerField": "Будь ласка, заповніть поле відповіді",
   "report": "Звіт: ",
-  "employeeName": "Ім'я співробітника: ",
-  "isRegularCus": "Постійний клієнт: ",
+  "employeeName": "Ім'я працівника: ",
+  "isRegularCus": "Звичайний код. : ",
   "cardPay": "Оплата карткою: ",
   "date": "Дата: ",
   "category": "Категорія: ",
-  "service": "Послуга: ",
+  "service": "Сервіс: ",
   "editReport": "Редагувати звіт",
   "employees": "Співробітники",
-  "noEmployeeFoundnpleaseAddANewEmployee": "Співробітників не знайдено\\nБудь ласка, додайте нового співробітника.",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Не знайдено жодного працівника\nБудь ласка, додайте нового працівника.",
   "search": "Пошук",
   "accessLevel": "Рівень доступу",
   "notLimited": "Не обмежено",
@@ -122,52 +122,52 @@
   "applyFilters": "Застосувати фільтри",
   "filters": "Фільтри",
   "phone": "Телефон",
-  "priceRange": "Ціновий діапазон",
+  "priceRange": "Діапазон цін",
   "dates": "Дати",
   "from": "Від",
   "to": "До",
   "masters": "Майстри",
   "services": "Послуги",
   "selectLanguage": "Виберіть мову",
-  "nameOfncost": "Назва витрат",
-  "relatedncategories": "Пов'язані категорії",
-  "deductednfromTax": "Відраховано з податку",
-  "systematicnexpenditure": "Систематичні витрати",
-  "deleteCost": "Видалити витрати",
-  "areYouSureYouWantToDeleteThisCost": "Ви впевнені, що хочете видалити ці витрати?",
-  "noData": "Немає даних",
-  "regncus": "Постійний клієнт",
-  "cardnpay": "Оплата карткою",
-  "employeendata": "Дані співробітника",
-  "customerndata": "Дані клієнта",
-  "newncus": "Новий клієнт",
-  "total": "Загальний",
-  "deleted": "Видалено",
-  "itemDeleted": "Елемент видалено",
-  "deleteCategory": "Видалити категорію",
-  "areYouSureYouWantToDeleteThisCategory": "Ви впевнені, що хочете видалити цю категорію?",
-  "deleteService": "Видалити послугу",
-  "areYouSureYouWantToDeleteThisService": "Ви впевнені, що хочете видалити цю послугу?",
-  "noServicesFoundnpleaseAddANewService": "Послуг не знайдено\\nБудь ласка, додайте нову послугу",
-  "backupRestoredSuccessfully": "Резервна копія успішно відновлена!",
-  "reloadApp": "Перезавантажити програму",
-  "restoringDatabase": "Відновлення бази даних...",
-  "exported": "Експортовано",
-  "checkYourFileInTheDownloadsFolder": "Перевірте ваш файл у папці Завантаження",
-  "selectTheDatabaseToRestore": "Виберіть базу даних для відновлення",
-  "reportssalesTracker": "Звіти/Трекер продажів",
-  "costsTracker": "Трекер витрат",
-  "clearDates": "Очистити дати",
-  "anErrorOccurred": "Сталася помилка",
-  "noDataFound": "Даних не знайдено",
-  "masternname": "Ім'я майстра",
-  "noRegnclient": "Кількість постійних клієнтів",
-  "noNewnclient": "Кількість нових клієнтів",
-  "noOfnservices": "Кількість послуг",
-  "cost": "Вартість",
-  "newnclient": "Новий клієнт",
-  "regnclient": "Постійний клієнт",
-  "numOfnservices": "Кількість послуг",
-  "costs": "витрати",
-  "sales": "Продажі"
+  "nameOfncost": "Назва\nвартості",
+  "relatedncategories": "Пов'язані\nкатегорії",
+  "deductednfromTax": "Вираховано\nз ПОДАТКУ",
+  "systematicnexpenditure": "Систmatic\nВитрати",
+ "deleteCost": "Видалити вартість",
+ "areYouSureYouWantToDeleteThisCost": "Ви впевнені, що хочете видалити цю вартість?",
+ "noData": "Немає даних",
+ "regncus": "Рег\nCus",
+ "cardnpay": "Картка\nОплата",
+ "employeendata": "Дані\nпрацівника",
+ "customerndata": "Дані\nклієнта",
+ "newncus": "Новий\nCus",
+ "total": "Усього",
+ "deleted": "Видалено",
+ "itemDeleted": "Елемент видалено",
+ "deleteCategory": "Видалити категорію",
+ "areYouSureYouWantToDeleteThisCategory": "Ви впевнені, що хочете видалити цю категорію?",
+ "deleteService": "Видалити службу",
+ "areYouSureYouWantToDeleteThisService": "Ви впевнені, що хочете видалити цю службу?",
+ "noServicesFoundnpleaseAddANewService": "Служби не знайдено\nДодайте нову службу",
+ "backupRestoredSuccessfully": "Резервну копію успішно відновлено!",
+ "reloadApp": "Перезавантажити програму",
+ "restoringDatabase": "Відновлення бази даних...",
+ "exported": "Експортовано",
+ "checkYourFileInTheDownloadsFolder": "Перевірте свій файл у папці завантажень",
+ "selectTheDatabaseToRestore": "Виберіть базу даних для відновлення",
+ "reportssalesTracker": "Звіти/відстеження продажів",
+ "costsTracker": "Відстеження витрат",
+ "clearDates": "Очистити дати",
+ "anErrorOccurred": "Сталася помилка",
+ "noDataFound": "Дані не знайдено",
+ "masternname": "Головне\nім'я",
+ "noRegnclient": "Номер Reg\nClient",
+ "noNewnclient": "Ні. Новий\nклієнт",
+ "noOfnservices": "Кількість\nслужб",
+ "cost": "Вартість",
+ "newnclient": "Новий\nклієнт",
+ "regnclient": "Реєстраційний\nклієнт",
+ "numOfnservices": "Кількість\nслужб",
+ "costs": "витрати",
+ "sales": "Продажі"
 }
