--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -38,7 +38,7 @@
   "lastName": "Фамилия",
   "enterYourLogin": "Введите свой логин",
   "enterYourPassword": "Введите свой пароль",
-  "selectCategoriesFromTheListnmaybeSeveral": "Выберите категории из списка\\n(может быть несколько)",
+  "selectCategoriesFromTheListnmaybeSeveral": "Выберите категории из списка\n(может быть несколько)",
   "setPercentageOfIncomeIfNecessary": "При необходимости установите процент дохода",
   "setPercentageOfIncome": "Установить процент дохода",
   "percentage": "Процент",
@@ -114,7 +114,7 @@
   "service": "Сервис: ",
   "editReport": "Редактировать отчет",
   "employees": "Сотрудники",
-  "noEmployeeFoundnpleaseAddANewEmployee": "Сотрудник не найден\\nПожалуйста, добавьте нового сотрудника.",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Сотрудник не найден\nПожалуйста, добавьте нового сотрудника.",
   "search": "Поиск",
   "accessLevel": "Уровень доступа",
   "notLimited": "Не ограничено",
@@ -129,18 +129,18 @@
   "masters": "Мастера",
   "services": "Услуги",
   "selectLanguage": "Выбрать язык",
-  "nameOfncost": "Имя\\nCost",
-  "relatedncategories": "Связанные\\nКатегории",
-  "deductednfromTax": "Вычтено\\nиз налога",
-  "systematicnexpenditure": "Системаматематические\\nРасходы",
+  "nameOfncost": "Имя\nCost",
+  "relatedncategories": "Связанные\nКатегории",
+  "deductednfromTax": "Вычтено\nиз налога",
+  "systematicnexpenditure": "Системаматематические\nРасходы",
  "deleteCost": "Удалить стоимость",
  "areYouSureYouWantToDeleteThisCost": "Вы уверены, что хотите удалить эту стоимость?",
  "noData": "Нет данных",
- "regncus": "Reg\\nCus",
- "cardnpay": "Карта\\nPay",
- "employeendata": "Данные о сотруднике\\n",
- "customerndata": "Данные клиента\\n",
- "newncus": "Новый\\nCus",
+ "regncus": "Reg\nCus",
+ "cardnpay": "Карта\nPay",
+ "employeendata": "Данные о сотруднике\n",
+ "customerndata": "Данные клиента\n",
+ "newncus": "Новый\nCus",
  "total": "Итого",
  "deleted": "Удален",
  "itemDeleted": "Элемент удален",
@@ -148,7 +148,7 @@
  "areYouSureYouWantToDeleteThisCategory": "Вы уверены, что хотите удалить эту категорию?",
  "deleteService": "Удалить службу",
  "areYouSureYouWantToDeleteThisService": "Вы уверены, что хотите удалить эту службу?",
- "noServicesFoundnpleaseAddANewService": "Службы не найдены\\nПожалуйста, добавьте новую службу",
+ "noServicesFoundnpleaseAddANewService": "Службы не найдены\nПожалуйста, добавьте новую службу",
  "backupRestoredSuccessfully": "Резервная копия успешно восстановлена!",
  "reloadApp": "Перезагрузить приложение",
  "restoringDatabase": "Восстановление базы данных...",
@@ -160,14 +160,14 @@
  "clearDates": "Очистить даты",
  "anErrorOccurred": "Произошла ошибка",
  "noDataFound": "Данные не найдены",
- "masternname": "Мастер\\nИмя",
- "noRegnclient": "Нет. Reg\\nClient",
- "noNewnclient": "Нет. Новый\\nКлиент",
- "noOfnservices": "Нет\\nуслуг",
+ "masternname": "Мастер\nИмя",
+ "noRegnclient": "Нет. Reg\nClient",
+ "noNewnclient": "Нет. Новый\nКлиент",
+ "noOfnservices": "Нет\nуслуг",
  "cost": "Стоимость",
- "newnclient": "Новый\\nКлиент",
- "regnclient": "Регистр\\nКлиент",
- "numOfnservices": "Количество\\nУслуг",
+ "newnclient": "Новый\nКлиент",
+ "regnclient": "Регистр\nКлиент",
+ "numOfnservices": "Количество\nУслуг",
  "costs": "расходы",
  "sales": "Продажи"
 }
